---
title: Instance Management Domain
config:
  layout: elk
  theme: neutral
---
erDiagram
	direction LR
  %% Print-friendly (A4): attribute lists are trimmed to keep tables compact.
  %% For full columns (timestamps, secrets, long text fields), refer to the Prisma schema.

  %% ── Actors ─────────────────────────────────────────────────────────────────
  PLATFORM_USER {
    int    id   PK
    string role "ADMIN | INSTRUCTOR | STUDENT"
  }

  %% ── PVE Infrastructure ─────────────────────────────────────────────────────
  PVE_VM {
    int    id       PK
    int    vmId     UK
    string hostname UK
    string status   "RUNNING | STOPPED | SUSPENDED"
  }

  PVE_TEMPLATE {
    int    id   PK
    string name
    string type "QEMU | LXC"
  }

  %% ── Academic Linkage ───────────────────────────────────────────────────────
  COURSE_OFFERING {
    int id PK
  }

  SEMESTER {
    int    id   PK
    string name
  }

  %% ── Instance Core ──────────────────────────────────────────────────────────
  INSTANCE {
    int      id               PK
    int      platformUserId   FK
    int      pveVMId          FK "nullable"
    int      pveTemplateId    FK
    int      cpus
    int      memoryMB
    int      diskGB
    int      courseOfferingId FK "nullable"
    int      requestId        FK "unique, nullable"
    int      semesterId       FK "nullable"
    string   status           "PENDING | ACTIVE | PROMOTED | INACTIVE | DELETED"
    string   provisionStatus  "NOT_STARTED | QUEUED | PROVISIONING | COMPLETED | FAILED"
  }

  %% ── Networking ─────────────────────────────────────────────────────────────
  INSTANCE_REVERSE_PROXY {
    int      id          PK
    int      targetPort
    string   type        "HTTPS | HTTP"
    int      instanceId  FK
  }

  %% ── Audit ──────────────────────────────────────────────────────────────────
  INSTANCE_AUDIT_LOG {
    int      id            PK
    int      instanceId    FK
    string   action
    int      performedById FK
    datetime timestamp
  }

  %% ── Relationships ──────────────────────────────────────────────────────────
  PLATFORM_USER   ||--o{ INSTANCE              : "owns"
  PVE_TEMPLATE    ||--o{ INSTANCE              : "template"
  PVE_VM          |o--o{ INSTANCE              : "vm"
  COURSE_OFFERING |o--o{ INSTANCE              : "course"
  SEMESTER        |o--o{ INSTANCE              : "semester"
  INSTANCE        ||--o{ INSTANCE_REVERSE_PROXY : "routes"
  INSTANCE        ||--o{ INSTANCE_AUDIT_LOG     : "audit"
  PLATFORM_USER   ||--o{ INSTANCE_AUDIT_LOG     : "performed by"
